--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 	<!-- Тут прописывай стили по id -->
 	<style>
 		/* Подключаем шрифты */
-		@font-face { font-family: 'Montserrat Medium'; src: url('Montserrat-Medium.woff') format('woff'); font-display: swap;}
-		@font-face { font-family: 'Montserrat SemiBold'; src: url('Montserrat-SemiBold.woff') format('woff'); font-display: swap;}
+		@font-face { font-family: 'Montserrat Medium'; src: url('Montserrat-Medium.woff') format('woff'), url('Montserrat-Medium.ttf') format('ttf'); font-display: swap;}
+		@font-face { font-family: 'Montserrat SemiBold'; src: url('Montserrat-SemiBold.woff') format('woff'), url('Montserrat-Medium.ttf') format('ttf'); font-display: swap;}
 		/* Это нужно,чтобы по необходимости два svg-фона "склеивались" без пробелов */
 		* { margin: 0; padding: 0;}
 		/* Десктопная версия */
@@ -63,4 +63,5 @@
 
 
 </html>
+
 
