--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		@font-face { font-family: 'Montserrat Medium'; src: url('Montserrat-Medium.woff') format('woff'), url('Montserrat-Medium.ttf') format('ttf'); font-display: swap;}
 		@font-face { font-family: 'Montserrat SemiBold'; src: url('Montserrat-SemiBold.woff') format('woff'), url('Montserrat-Medium.ttf') format('ttf'); font-display: swap;}
 		/* Это нужно,чтобы по необходимости два svg-фона "склеивались" без пробелов */
-		* { margin: 0; padding: 0;}
+		* { margin: 0; padding: 0; line-height: 0;}
 		/* Десктопная версия */
 		/* чтобы всё позиционировалось относительно SVG-фона - основы контейнера */
 		.svg-container-desktop {position: relative;  width: 100%; margin: auto;}
@@ -63,5 +63,6 @@
 
 
 </html>
+
 
 
